--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   lottie: ^3.3.1
   animated_splash_screen: ^1.3.0
+  phone_form_field: ^10.0.4
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
