--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   animated_splash_screen: ^1.3.0
   phone_form_field: ^10.0.4
   email_validator: ^3.0.0
+  provider: ^6.1.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
