--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   email_validator: ^3.0.0
   provider: ^6.1.2
   http: ^1.3.0
+  flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/images/logo.png"
+    min_sdk_android: 21
 
 dev_dependencies:
   flutter_test:
@@ -92,3 +99,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  
